<resources>
    <string name="app_name">All in one</string>
    <string name="ecuacion">Calculo de Ecuacion Cuadratica</string>
    <string name="votos">Votacion</string>
    <string name="salario">Calculo de Salario</string>

    <string name="valorA">Valor de a</string>
    <string name="valorB">Valor de b</string>
    <string name="valorC">Valor de c</string>
    <string name="Btn_calcular">Calcular Ecuacion</string>
    <string name="votaciones">Votaciones</string>
    <string name="ingrese_lo_votos">Ingrese lo votos</string>
    <string name="agregar">Enviar votos</string>


</resources>