<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ecuacion_Cuadratica.Ejercicio_1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ecuacion"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:src="@drawable/image2"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/transparente"
        />

    <EditText
        android:id="@+id/valorA"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:hint="@string/valorA"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/valorB"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:hint="@string/valorB"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/valorC"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:hint="@string/valorC"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        />
    <Button
        android:id="@+id/calcularEcuacion"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:text="@string/Btn_calcular"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Resultado"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        />




</LinearLayout>