<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.MainActivity"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/android"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"

        />

        <Button
            android:id="@+id/ecuacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/ecuacion"
            />

        <Button
            android:id="@+id/votos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/votos"
            />

        <Button
            android:id="@+id/salarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/salario"
            />


</LinearLayout>